Added the code for the POST api
